Add wish table for user index

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,20 @@
-.container.hero Special Gifts
-Welcome to your special wishlist
+%h2.container.hero Special Gifts
+%h3.title
+  Welcome to your special wishlist
+  = current_user.name
+  !
+
+%h3 Your Wishes
+%table.table.wishes
+  %tr.wish-header
+    %th.wish-title Title
+    %th.wish-description Description
+    %th.wish-url URL
+  - current_user.wishes.each do |wish|
+    %tr.wish
+      %td
+        = wish.title
+      %td
+        = wish.description
+      %td
+        = wish.url
