--- a/app/views/wishes/index.html.haml
+++ b/app/views/wishes/index.html.haml
@@ -19,7 +19,7 @@
         %td= wish.url
         %td= wish.wisher.email
         %td= link_to 'Edit', edit_user_wish_path(user_id: params[:user_id], id: wish.id)
-        %td= link_to 'Destroy', user_wish_path(user_id: params[:user_id], id: wish.id), :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Destroy', user_wish_path(user_id: params[:user_id], id: wish.id), method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
