--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,5 @@
-%h2.container.hero Wishlist
-%h3.title
-  Welcome to the Wishlist App!
+.container.hero
+  .four.columns
+    %h2 Wishlist
+    %h3.title
+      Welcome to the Wishlist App!
