--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,10 +1,16 @@
 %h2 Resend confirmation instructions
-= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+= form_for(resource,
+  as: resource_name,
+  url: confirmation_path(resource_name),
+  html: { method: :post }) do |f|
   = devise_error_messages!
   .field
     = f.label :email
     %br/
-    = f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
+    - if resource.pending_reconfirmation?
+      = f.email_field :email, autofocus: true, value: resource.unconfirmed_email
+    - else
+      = f.email_field :email, autofocus: true, value: resource.email
   .actions
-    = f.submit "Resend confirmation instructions"
-= render "devise/shared/links"
+    = f.submit 'Resend confirmation instructions'
+= render 'devise/shared/links'
