--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,7 @@
 %h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+= form_for(resource,
+  as: resource_name,
+  url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
     = f.label :email
@@ -11,11 +13,11 @@
       %em
         (#{@minimum_password_length} characters minimum)
     %br/
-    = f.password_field :password, autocomplete: "off"
+    = f.password_field :password, autocomplete: 'off'
   .field
     = f.label :password_confirmation
     %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
+    = f.password_field :password_confirmation, autocomplete: 'off'
   .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+    = f.submit 'Sign up'
+= render 'devise/shared/links'
