--- a/app/views/wishes/_form.html.haml
+++ b/app/views/wishes/_form.html.haml
@@ -1,9 +1,11 @@
-= form_for @wish do |f|
-  - if @wish.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@wish.errors.count, "error")} prohibited this wish from being saved:"
+= form_for wish do |f|
+  - if wish.errors.any?
+    #error-explanation
+      %h2
+        " #{pluralize(wish.errors.count, 'error')} "
+        prohibited this wish from being saved:
       %ul
-        - @wish.errors.full_messages.each do |msg|
+        - wish.errors.full_messages.each do |msg|
           %li= msg
 
   .field
