--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,3 @@
 .container.hero
-  .four.columns
-    %h2 Wishlist
-    %h3.title
-      Welcome to the Wishlist App!
+  %h2 Wishlist
+  %h3 What do you want?
