--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,21 +1,10 @@
-%nav.navbar.navbar-default{ role: 'navigation' }
-  .container-fluid
-    / Brand and toggle get grouped for better mobile display
-    .navbar-header
-      %button.navbar-toggle{ 'data-target' => '#bs-example-navbar-collapse-1',
-        'data-toggle' => 'collapse',
-        type: 'button' }
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.navbar-brand{ href: '#' } Special Gifts
-    / Collect the nav links, forms, and other content for toggling
-    .collapse.navbar-collapse#bs-example-navbar-collapse-1
-      %ul.nav.navbar-nav.navbar-right
-        %li
-          - if signed_in?
-            = link_to 'Sign-out', destroy_user_session_path, method: :delete
-            -# %a{href: destroy_user_session_path, method: :delete} Sign-out
-          - else
-            %a{ href: new_user_session_path } Sign-in
+%nav
+  %ul.navbar
+    %li My Wishes
+    %li Friend Wishes
+    %li.sign-out
+      - if signed_in?
+        = link_to 'Sign-out', destroy_user_session_path, method: :delete
+        -# %a{href: destroy_user_session_path, method: :delete} Sign-out
+      - else
+        %a{ href: new_user_session_path } Sign-in
