--- a/app/views/wishes/new.html.haml
+++ b/app/views/wishes/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New wish
 
-= render 'form', locals: { wish: @wish }
+= render partial: 'form', locals: { wish: current_user.wishes.build }
 
-= link_to 'Back', wishes_path
+= link_to 'Back', user_wishes_path(current_user)
