--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,8 @@
 %nav
   %ul.navbar
-    %li My Wishes
-    %li Friend Wishes
+    %li
+      = link_to 'My Wishes', user_wishes_path(current_user)
+    %li Friends
     %li.sign-out
       - if signed_in?
         = link_to 'Sign-out', destroy_user_session_path, method: :delete
