--- a/app/views/wishes/_form.html.haml
+++ b/app/views/wishes/_form.html.haml
@@ -1,21 +1,9 @@
-= form_with model: wish, url: user_wishes_path(wish.wisher) do |f|
-  - if wish.errors.any?
-    #error-explanation
-      %h2
-        " #{pluralize(wish.errors.count, 'error')} "
-        prohibited this wish from being saved:
-      %ul
-        - wish.errors.full_messages.each do |msg|
-          %li= msg
-
+= form_with model: wish, url: submit_url do |f|
   .field
     = f.label :title
     = f.text_field :title
   .field
     = f.label :description
     = f.text_area :description
-  .field
-    = f.label :url
-    = f.text_area :url
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save Wish'
