--- a/app/views/wishes/show.html.haml
+++ b/app/views/wishes/show.html.haml
@@ -6,13 +6,7 @@
 %p
   %b Description:
   = @wish.description
-%p
-  %b Url:
-  = @wish.url
-%p
-  %b Wisher:
-  = @wish.wisher
 
-= link_to 'Edit', edit_wish_path(@wish)
+= link_to 'Edit Wish', edit_wish_path(@wish)
 \|
-= link_to 'Back', wishes_path
+= link_to "Back To #{@wisher_name} Wishes", user_wishes_path(@wish.wisher)
