--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,8 @@
     %meta{ content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type' }
     %title Wishlist
     = csrf_meta_tags
-    = stylesheet_link_tag 'application',
-      media: 'all',
-      'data-turbolinks-track' => 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_pack_tag 'application'
   %body
     = render 'layouts/navbar'
 
