--- a/app/assets/stylesheets/wishlist.scss
+++ b/app/assets/stylesheets/wishlist.scss
@@ -1,3 +1,19 @@
 .hero {
   justify-self: center;
 }
+
+.wishlist-app {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: "sidebar main main";
+  grid-column-gap: 10px;
+  justify-items: center;
+}
+
+.sidebar {
+  grid-area: "sidebar";
+}
+
+.main {
+  grid-area: "main";
+}
