--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,6 +1,6 @@
 ul.navbar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: [header-start] 1fr 1fr 1fr 1fr [header-end];
   justify-items: left;
   text-align: left;
   list-style-type: none;
@@ -18,6 +18,6 @@ ul.navbar {
   }
 
   li.sign-out {
-    justify-self: end;
+    grid-column: header-end;
   }
 }
